# aka0

./: .clang-format  .gitignore  CMakeLists.txt  build_riscv_debug.sh  logger.hpp  motor.cpp  motor.hpp  process.py  tennis.cpp  vi_capture.cpp  vi_capture.hpp
sensor/: Makefile  README.md  build.sh
sensor/include/linux/: cvi_type.h  i2c.h  videodev2.h
